--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -1,22 +1,13 @@
 <div class="header-img"></div>
 <form action="/action_page.php" #myForm="ngForm" (ngSubmit)="add()" style="direction: rtl;" >
-<div class="section first-section">
+  <div class="section first-section">
     <h2 class="title">מידע אישי לנעזר</h2>
     <div class="row prograph">
         <div class="col-6">
             <h6>מידע אישי</h6>
-<<<<<<< HEAD
             <input class="form-control" placeholder="שם פרטי" type="text" #ngFirstName="ngModel" [(ngModel)]="Assisted.Assisted.first_name" name="first_name"/>
             <input class="form-control" placeholder="תעודת זהות" type="text" #ngId="ngModel" [(ngModel)]="Assisted.Assisted.id_assisted" name="id_assisted"/>
             <input class="form-control" placeholder="כתובת אימייל" type="email" #ngId="ngModel" [(ngModel)]="Assisted.Assisted.e_mail" name="e_mail"/>
-=======
-
-            <input class="form-control" placeholder="שם פרטי" type="text" #ngFirstName="ngModel" [(ngModel)]="Assisted.Assisted.first_name" name="first_name"/>
-            <input class="form-control" placeholder="תעודת זהות" type="text" #ngId="ngModel" [(ngModel)]="Assisted.Assisted.id_assisted" name="id_assisted"/>
-            <input class="form-control" placeholder="כתובת אימייל" type="email" #ngId="ngModel" [(ngModel)]="Assisted.Assisted.e_mail" name="e_mail"/>
-
-
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
             <!-- <input class="form-control" placeholder="טלפון נוסף "/> -->
             <input type="date" class="form-control" placeholder="תאריך לידה" type="date" #ngDate="ngModel" [(ngModel)]="Assisted.Assisted.date_birth" name="date_birth"/>
         </div>      
@@ -25,14 +16,7 @@
             <select class="form-select form-control" aria-label="Default select example">
                 <option *ngFor="let item of list">{{item.description}}</option>
               </select>
-<<<<<<< HEAD
             <input class="form-control" placeholder="מספר טלפון" type="number" #ngPhone="ngModel" [(ngModel)]="Assisted.Assisted.phone" name="phone"/>
-=======
-
-            <input class="form-control" placeholder="מספר טלפון" type="number" #ngPhone="ngModel" [(ngModel)]="Assisted.Assisted.phone" name="phone"/>
-
-
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
             <select class="form-select form-control" aria-label="Default select example">
                 <option *ngFor="let item of list1">{{item.description}}</option>
               </select>
@@ -41,10 +25,6 @@
     <div class="row prograph">
         <div class="col-6">
             <h6>כתובת</h6>
-<<<<<<< HEAD
-=======
-
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
             <input class="form-control" placeholder="עיר" type="text" #ngCity="ngModel" [(ngModel)]="Assisted.Assisted.code_city" name="code_city"/>
             <input class="form-control" placeholder="מספר בנין" type="number" #ngNumberBuild="ngModel" [(ngModel)]="Assisted.Assisted.number_building" name="number_building"/>
             <input class="form-control" placeholder="מספר בית" type="number" #ngNumberHouse="ngModel" [(ngModel)]="Assisted.Assisted.number_house" name="number_house"/>
@@ -53,15 +33,8 @@
             <input class="form-control" placeholder=" רחוב" type="text" #ngStreet="ngModel" [(ngModel)]="Assisted.Assisted.street" name="street"/>
             <input class="form-control" placeholder="קומה" type="number" #ngFloor="ngModel" [(ngModel)]="Assisted.Assisted.number_floor" name="number_floor"/>
             <input class="form-control" placeholder="מיקוד" type="number" #ngPostalCode="ngModel" [(ngModel)]="Assisted.Assisted.postal_code" name="postal_code"/>
-<<<<<<< HEAD
         </div>
-=======
-
-            
-
-        </div>
-   
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
+    </div>
         <div class="row prograph">
           <div class="col-6">
             <h6>תחומים וסיסמא</h6>
@@ -71,10 +44,9 @@
             <input class="form-control" placeholder="סיסמא">
           </div>
         </div>
-    </div>
     <!-- <div class="row prograph">
         <div class="col">
-            <!-- <h6 class="inline-title">סוג טלפון:</h6>
+            <!- <h6 class="inline-title">סוג טלפון:</h6>
             <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="phone1" name="phone" class="custom-control-input" value="SMS">
                 <label class="custom-control-label purple" for="phone1">SMS</label>
@@ -87,24 +59,16 @@
                 <input type="radio" id="phone3" name="phone" class="custom-control-input" value="kosher">
                 <label class="custom-control-label purple" for="phone3">כשר</label>
             </div> -->
-        </div>
-    </div> -->
+        <!-- </div> -->
+    <!-- </div>  -->
     <div class="row prograph">
         <div class="col">
-
             <h6 class="inline-title"> שפות:</h6>
-
             <div class="custom-control custom-checkbox">
-<<<<<<< HEAD
                 <input type="checkbox" id="lang1" name="lang" class="custom-control-input"  value="no">
-=======
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input" >
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
-
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
             <div class="custom-control custom-checkbox">
-<<<<<<< HEAD
                 <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input"  value="english">
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
             </div>
@@ -117,29 +81,15 @@
                 <label class="custom-control-label purple" for="lang4">ספרדית</label>
             </div>
             <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input"  value="arabic">
-=======
-                <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" >
-                <label class="custom-control-label purple" for="lang2">אנגלית</label>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input #lang3 type="checkbox" id="lang3" name="lang" class="custom-control-input" >
-                <label class="custom-control-label purple" for="lang3">רוסית</label>
-            </div>
-            <div class="custom-control custom-checkbox">
-                <input #lang4 type="checkbox" id="lang4" name="lang" class="custom-control-input" >
-                <label class="custom-control-label purple" for="lang4">ספרדית</label>
-            </div>
-            <div class="custom-control custom-checkbox">
                 <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" >
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
             </div>
         </div>
     </div>
     <div class="button-wapper">
         <button type="submit" class="btn btn-dark btn-perple btn-lg"> רישום</button>
-    </div>   
-</div>
+    </div> 
+  </div>
 </form>
+
 
