--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -1,5 +1,5 @@
 <div class="header-img"></div>
-<form action="/action_page.php" #myForm="ngForm" (ngSubmit)="add()" style="direction: rtl;" >
+<form action="/action_page.php" #myForm="ngForm" (ngSubmit)="add()" style="direction: rtl;">
 <div class="section first-section">
     <h2 class="title">מידע אישי למתנדב</h2>
     <div class="row prograph">
@@ -22,27 +22,15 @@
                 <option *ngFor="let item of list1">{{item.description}}</option>
                 <!-- <! <select [(ngModel)]="takingDeliveryService.newTakingDelivery.TDCityID" [ngModelOptions]="{standalone: true}" nam="city"> --> 
             </select> 
-<<<<<<< HEAD
         </div>
-=======
 
-        </div>
-        
-
-
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
             <div class="col">
               <h6>תחומים וסיסמא</h6>
               <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
             </div>
             <div class="col-6 second-col">
               <input class="form-control" placeholder="סיסמא">
-<<<<<<< HEAD
             </div>  
-=======
-            </div>
-          
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
     </div>
     <div class="row prograph">
         <div class="col-6">
@@ -57,15 +45,9 @@
             <input class="form-control" placeholder="מיקוד" type="number" #ngPostalCode="ngModel" [(ngModel)]="Volunteer.Volunteer.postal_code" name="postal_code" />
         </div>
     </div>
-<<<<<<< HEAD
-    <div class="row prograph">
-=======
-
-    <div class="row prograph">
-
-
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
-        <!-- <div class="col">
+    <!-- <div class="row prograph"> -->
+    <!-- <div class="row prograph">
+        <div class="col">
             <h6 class="inline-title">סוג טלפון:</h6>
             <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="phone1" name="phone" class="custom-control-input" value="SMS">
@@ -79,8 +61,8 @@
                 <input type="radio" id="phone3" name="phone" class="custom-control-input" value="kosher">
                 <label class="custom-control-label purple" for="phone3">כשר</label>
             </div>
-        </div> -->
-    </div>
+        </div>
+    </div> -->
     <!-- <div class="row prograph">
         <div class="col">
 
@@ -98,21 +80,16 @@
     </div> -->
     <div class="row prograph">
         <div class="col">
-            <h6 class="inline-title"> שפות:</h6>
-<<<<<<< HEAD
-            
-            <div class="custom-control custom-checkbox" *ngFor="let item of list5">
+            <h6 class="inline-title"> שפות:</h6>        
+            <!-- <div class="custom-control custom-checkbox" *ngFor="let item of list5">
                 <input type="checkbox" id="lang1" name="lang" class="custom-control-input">
                 <label class="custom-control-label purple" for="lang1">{{item.name_language}}</label>
-            </div>
-            <!-- <div class="custom-control custom-checkbox">
-=======
+            </div> -->
             <div class="custom-control custom-checkbox">
                 <input type="checkbox" id="lang1" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
             <div class="custom-control custom-checkbox">
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
                 <input #lang2 type="checkbox" id="lang2" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang2">אנגלית</label>
             </div>
@@ -127,24 +104,18 @@
             <div class="custom-control custom-checkbox">
                 <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
-            </div> -->
+            </div> 
         </div>
-    </div>   
-</div>
+    </div>  
+</div> 
 <div class="section">
     <h2 class="title"> מידע נוסף למתנדב </h2>
         <div>
         <!-- <h5>שירות</h5> -->
         <div>
             <div class="row prograph">
-                <!-- <h5> רכב/רישיון נהיגה</h5> -->
-<<<<<<< HEAD
-                <div class="col">   
-=======
-
+                <!-- <h5> רכב/רישיון נהיגה</h5> -->   
                 <div class="col">  
-                       
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
                     <h6 class="inline-title"> רשיון נהיגה :</h6>      
                     <div class="custom-control custom-radio custom-control-inline">
                         <input type="radio" id="license1" name="license" class="custom-control-input" value="yes">
@@ -159,12 +130,7 @@
                         <option *ngFor="let item of list2">{{item.description}}</option>
                     </select>
                     <input type="date" class="form-control" placeholder="תאריך תוקף"/>
-                </div>
-<<<<<<< HEAD
-=======
-                    
-
->>>>>>> fc690ff024e5f3280c096a033aa81d2fe5febe8b
+                   </div>
                 <!-- <div class="col">
                     <h6 class="inline-title"> וו גרירה  :</h6>
         
@@ -212,7 +178,6 @@
                 </div> -->
                 <!-- <div class="col">
                     <h6 class="inline-title"> גליון נהיגה    :</h6>
-        
                     <div class="custom-control custom-radio custom-control-inline">
                         <input type="radio" id="sheet1" name="sheet" class="custom-control-input" value="yes">
                         <label class="custom-control-label purple" for="sheet1">נקי</label>
@@ -313,7 +278,7 @@
         <div  class="col-6 second-col">
         </div>
     </div>
-    </div>
+ </div>
 </div>
 <div class="section">
     <h2 class="title"> זמינות</h2>
@@ -321,10 +286,10 @@
         <select class="form-select form-control" aria-label="Default select example">
             <option *ngFor="let item of list4">{{item.description}}</option>
         </select>
-
         <div class="button-wapper">
             <button type="submit" class="btn btn-dark btn-perple btn-lg"> אישור  </button>
         </div>
     </div>
-</div>
+ </div>
+
 </form>
